--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Jogo Runner</title>
-    <link rel="icon" href="./IMG/LogoTWK.webp" type="image/png">
+    <link rel="icon" href="./IMG/game_16537186.png" type="image/webp">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
